--- a/mathquill.css
+++ b/mathquill.css
@@ -24,6 +24,8 @@
 .mathquill-rendered-math .font,
 .mathquill-rendered-math sup,
 .mathquill-rendered-math sub,
+.mathquill-rendered-math .sup,
+.mathquill-rendered-math .sub,
 .mathquill-rendered-math .fraction,
 .mathquill-rendered-math .sqrt-prefix,
 .mathquill-rendered-math .sqrt-stem,
@@ -94,6 +96,8 @@
 .mathquill-rendered-math .selection .font,
 .mathquill-rendered-math .selection sup,
 .mathquill-rendered-math .selection sub,
+.mathquill-rendered-math .selection .sup,
+.mathquill-rendered-math .selection .sub,
 .mathquill-rendered-math .selection .fraction,
 .mathquill-rendered-math .selection .sqrt-prefix,
 .mathquill-rendered-math .selection .sqrt-stem,
@@ -113,6 +117,8 @@
 .mathquill-rendered-math .selection.blur .font,
 .mathquill-rendered-math .selection.blur sup,
 .mathquill-rendered-math .selection.blur sub,
+.mathquill-rendered-math .selection.blur .sup,
+.mathquill-rendered-math .selection.blur .sub,
 .mathquill-rendered-math .selection.blur .fraction,
 .mathquill-rendered-math .selection.blur .sqrt-prefix,
 .mathquill-rendered-math .selection.blur .sqrt-stem,
@@ -131,6 +137,8 @@
 .mathquill-rendered-math .selection .selection.blur .font,
 .mathquill-rendered-math .selection .selection.blur sup,
 .mathquill-rendered-math .selection .selection.blur sub,
+.mathquill-rendered-math .selection .selection.blur .sup,
+.mathquill-rendered-math .selection .selection.blur .sub,
 .mathquill-rendered-math .selection .selection.blur .fraction,
 .mathquill-rendered-math .selection .selection.blur .sqrt-prefix,
 .mathquill-rendered-math .selection .selection.blur .sqrt-stem,
@@ -147,6 +155,8 @@
 .mathquill-rendered-math .selection.blur .selection.blur .font,
 .mathquill-rendered-math .selection.blur .selection.blur sup,
 .mathquill-rendered-math .selection.blur .selection.blur sub,
+.mathquill-rendered-math .selection.blur .selection.blur .sup,
+.mathquill-rendered-math .selection.blur .selection.blur .sub,
 .mathquill-rendered-math .selection.blur .selection.blur .fraction,
 .mathquill-rendered-math .selection.blur .selection.blur .sqrt-prefix,
 .mathquill-rendered-math .selection.blur .selection.blur .sqrt-stem,
@@ -256,13 +266,13 @@
 .mathquill-rendered-math sup {
   vertical-align: .5em;
 }
-.mathquill-rendered-math sup>span {
+.mathquill-rendered-math .sup {
   vertical-align: bottom;
 }
 .mathquill-rendered-math sub {
   vertical-align: -.4em;
 }
-.mathquill-rendered-math sub>span {
+.mathquill-rendered-math .sub {
   vertical-align: top;
 }
 .mathquill-rendered-math sup.nthroot {
