--- a/mathquill.css
+++ b/mathquill.css
@@ -38,7 +38,7 @@
   padding-top: .075em;
 }
 .mathquill-editable, .mathquill-embedded-latex .mathquill-editable {
-  border: 1px solid gray;
+  /*border: 1px solid gray;*/
   padding: 2px;
 }
 .mathquill-embedded-latex .mathquill-editable {
