--- a/css/mathquill.css
+++ b/css/mathquill.css
@@ -419,6 +419,7 @@
 
 .mathquill-rendered-math var.un-italicized {
   font-family: Symbola, "Times New Roman", serif;
+  font-style: normal;
 }
 .mathquill-rendered-math var.un-italicized.last {
   padding-right: .2em;
