--- a/css/mathquill.css
+++ b/css/mathquill.css
@@ -259,7 +259,7 @@
   font-style: italic;
 }
 .mathquill-rendered-math var.florin { /* florin looks so much better than italic f */
-  margin: 0 -.1em;
+  margin: 0 .1em;
 }
 
 .mathquill-rendered-math big {
