fix very tall super/subscripts
Conflicts:

	mathquill.css
	src/commands.js

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -146,6 +146,10 @@
       margin-left: .2em;
       min-width: .5em;
     }
+
+    .sup {
+      vertical-align: bottom;
+    }
   }
 
   sub {
@@ -153,6 +157,10 @@
 
     &.limit {
       vertical-align: -.6em;
+    }
+
+    .sub {
+      vertical-align: top;
     }
   }
 
