should be called int, not limit
Conflicts:

	src/commands.js

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -115,7 +115,7 @@
       padding-left: .1em;
     }
 
-    &.limit, &.nthroot {
+    &.int, &.nthroot {
       font-size: 80%;
     }
 
@@ -137,7 +137,7 @@
 
   sup {
     vertical-align: .5em;
-    &.limit, &.nthroot {
+    &.int, &.nthroot {
       vertical-align: 0.8em
     }
 
@@ -155,7 +155,7 @@
   sub {
     vertical-align: -.4em;
 
-    &.limit {
+    &.int {
       vertical-align: -.6em;
     }
 
