Keep mathquill from asking for Symbola, since we delay load it

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -11,7 +11,8 @@
 @import "./mixins/css3";
 @import "./mixins/display";
 
-@import "font.less";
+// JWM: we don't want this at desmos because we delay-load these fonts
+// @import "font.less";
 
 @import "editable.less";
 @import "math.less";
