editable unitalicized backslashless sin/cos/log etc.
"fake" autocmds when you type the last letter

for sqrt, sum and pi

LaTeX of UnItalicized hacks Variable::latex

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -188,10 +188,12 @@
   ////
   // non-italicized functions
   // like \sin, \cos, \ln, etc.
-  .non-italicized-function {
+  .un-italicized {
     font-family: Symbola, "Times New Roman", serif;
     line-height: .9;
     font-style: normal;
+  }
+  var.un-italicized.last {
     padding-right: .2em;
   }
 
