back-porting override_mathquill.css classes

--- a/src/css/textarea.less
+++ b/src/css/textarea.less
@@ -14,6 +14,7 @@
     // *and the blinking insertion point* in IE
     position: absolute;
     clip: rect(1em 1em 1em 1em);
+    resize: none;
   }
   // to be focusable, need to be visible, i.e. nonzero height/width;
   // Mobile Safari needs tabindex=0 span instead of textarea to not
