--- a/src/css/math.less
+++ b/src/css/math.less
@@ -86,15 +86,14 @@
 
   ////
   // operators
-  @operator-padding: 0.2em;
 
   .binary-operator {
-    padding: 0 @operator-padding;
+    padding: 0 0.1em;
     .inline-block;
   }
 
   .unary-operator {
-    padding-left: @operator-padding;
+    padding-left: 0.2em;
   }
 
   ////
@@ -103,6 +102,7 @@
   sup, sub {
     position: relative;
     font-size: 90%;
+    top: 0;
 
     .binary-operator {
       padding: 0 .1em;
