getting rid of delay-loading

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -11,9 +11,7 @@
 @import "./mixins/css3";
 @import "./mixins/display";
 
-// JWM: we don't want this at desmos because we delay-load these fonts
-// @import "font.less";
-
+@import "font.less";
 @import "editable.less";
 @import "math.less";
 
