--- a/src/css/font.less
+++ b/src/css/font.less
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: Symbola;
-  src: url(font/Symbola.eot);
+  font-family: Symbola-desmos;
+  src: url(font/Symbola-desmos.eot);
   src:
     local("Symbola Regular"),
     local("Symbola"),
-    url(font/Symbola.ttf) format("truetype"),
-    url(font/Symbola.otf) format("opentype"),
-    url(font/Symbola.svg#Symbola) format("svg")
+    url(font/Symbola-desmos.ttf) format("truetype"),
+    url(font/Symbola-desmos.otf) format("opentype"),
+    url(font/Symbola-desmos.svg#Symbola) format("svg")
   ;
 }
 
