Renamed font to Symbola-mq and cut the size some more

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -68,11 +68,11 @@
   }
 
   .sans-serif {
-    font-family: sans-serif, Symbola-desmos, serif;
+    font-family: sans-serif, Symbola-mq, serif;
   }
 
   .monospace {
-    font-family: monospace, Symbola-desmos, serif;
+    font-family: monospace, Symbola-mq, serif;
   }
 
   .overline {
@@ -186,7 +186,7 @@
   // non-italicized functions
   // like \sin, \cos, \ln, etc.
   .un-italicized {
-    font-family: Symbola-desmos, "Times New Roman", serif;
+    font-family: Symbola-mq, "Times New Roman", serif;
     line-height: .9;
     font-style: normal;
   }
