--- a/src/css/font.less
+++ b/src/css/font.less
@@ -1,11 +1,11 @@
 @font-face {
   font-family: Symbola-mq;
-  src: url(font/Symbola-mq.eot);
+  src: url("font/Symbola-mq.eot");
   src:
-    local("Symbola Regular"),
+    local("Symbola-mq"),
     local("Symbola"),
-    url(font/Symbola-mq.ttf) format("truetype"),
-    url(font/Symbola-mq.otf) format("opentype"),
-    url(font/Symbola-mq.svg#Symbola) format("svg")
+    url("font/Symbola-mq.ttf") format("truetype"),
+    url("font/Symbola-mq.otf") format("opentype"),
+    url("font/Symbola-mq.svg#Symbola") format("svg")
   ;
 }
