--- a/src/css/mixins/fonts.less
+++ b/src/css/mixins/fonts.less
@@ -1,3 +1,3 @@
-@symbola: Symbola-desmos, "Times New Roman", serif;
-@times: "Times New Roman", Symbola-desmos, serif;
+@symbola: "Symbola-mq", "Times New Roman", serif;
+@times: "Times New Roman", "Symbola-mq", serif;
 @mono: "Courier New", monospace;
