using mixins for more fonts

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -68,11 +68,12 @@
   }
 
   .sans-serif {
-    font-family: sans-serif, Symbola-mq, serif;
+    
+    font-family: @sans-serif;
   }
 
   .monospace {
-    font-family: monospace, Symbola-mq, serif;
+    font-family: @monospace;
   }
 
   .overline {
@@ -186,7 +187,7 @@
   // non-italicized functions
   // like \sin, \cos, \ln, etc.
   .un-italicized {
-    font-family: Symbola-mq, "Times New Roman", serif;
+    font-family: @symbola;
     line-height: .9;
     font-style: normal;
   }
