Symbola doesn't include unitalicized chars anymore

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -187,8 +187,8 @@
   // non-italicized functions
   // like \sin, \cos, \ln, etc.
   .un-italicized {
-    font-family: @symbola;
-    line-height: .9;
+    font-family: @times;
+    line-height: 1;
     font-style: normal;
   }
   var.un-italicized.last {
