WIP separate root block span

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -29,6 +29,9 @@
   // TODO: what's the difference between these?
   .empty {
     background: #ccc;
+    &.mathquill-root-block {
+      background: transparent;
+    }
   }
 
   &.empty {
