[WIP] hacky first attempt at a drag handle To do: * looks like this is only seek-horizontal-ing, i.e. I can't get into a fraction's denominator * doesn't smartly calculate the offset (i.e. using mouseX & mouseY, and we probably want to move from the middle of the cursor instead)

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -2,14 +2,37 @@
   .inline-block;
 
   .cursor {
-    border-left: 1px solid black;
     margin-right: -1px;
     position: relative;
     z-index: 1;
     padding: 0;
     .inline-block;
+    
+    .graphic {
+      border-left: 1px solid black;
+      .inline-block;
+    }
 
-    &.blink { visibility: hidden; }
+    &.blink {
+      .graphic {
+        visibility: hidden; 
+      }
+    }
+    
+    .handle {
+      width: 20px;
+      height: 20px;
+      background: #444;
+      border: 1px solid #000;
+      display: block;
+      position: absolute;
+      bottom: -24px;
+      left: -11px;
+      visibility: visible !important;
+      border-radius: 4px;
+      cursor: pointer;
+      opacity: .6;
+    }
   }
 
   // This is a workaround to override the
