adjusting the cursor handle

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -19,18 +19,18 @@
     }
     
     .handle {
-      width: 34px;
-      height: 40px;
+      width: 40px;
+      height: 50px;
       display: block;
       position: absolute;
       z-index: 0;
-      bottom: -42px;
-      left: -17px;
+      bottom: -50px;
+      left: -20px;
       visibility: visible !important;
       border-radius: 4px;
       text-align: center;
-      background: url(/img/pin-sq-top.png) no-repeat center 0;
-      background-size: 28px 28px;
+      background: url(/img/pin-sq-top.png) no-repeat center 3px;
+      background-size: 32px 32px;
     }
   }
 
