overriding box sizing

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -5,6 +5,12 @@
   font-size: 115%;
   line-height: 1;
 
+  * {
+    -moz-box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+  }
+
   .inline-block;
   .non-leaf, .scaled {
     .inline-block;
