--- a/src/css/math.less
+++ b/src/css/math.less
@@ -6,9 +6,9 @@
   line-height: 1;
 
   * {
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
+    -moz-box-sizing: content-box !important;
+    -webkit-box-sizing: content-box !important;
+    box-sizing: content-box !important;
   }
 
   .inline-block;
