--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -80,8 +80,7 @@
 
 // separated from above because unrecognized pseudoclasses
 // invalidate the entire selector
-.mathquill-editable .cursor:only-child:after,
-.mathquill-editable .textarea+.cursor:last-child:after {
+.mathquill-editable .cursor:only-child:after {
   visibility: hidden;
   content: 'c';
 }
