--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -74,15 +74,16 @@
 .mathquill-editable.empty:after,
 .mathquill-textbox:after,
 .mathquill-rendered-math .empty:after {
-  visibility: hidden;
-  content: 'c';
+  content: '';
+  width: .5em;
+  display: inline-block;
 }
 
 // separated from above because unrecognized pseudoclasses
 // invalidate the entire selector
-.mathquill-editable .cursor:only-child:after {
-  visibility: hidden;
-  content: 'c';
+.mathquill-editable .cursor:only-child .line {
+  width: .5em;
+  display: inline-block;
 }
 
 .mathquill-textbox {
