--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -15,6 +15,7 @@
       display: inline-block;
       -webkit-transform-origin: 0.5px bottom;
       -webkit-transform: translateX(-.5px);
+      opacity: .5;
       &:before, &:after {
         content: '';
         position: absolute;
