Fix cursor handle in empty blocks
Was offset to the right of where it should be by .5em

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -84,9 +84,8 @@
 
 // separated from above because unrecognized pseudoclasses
 // invalidate the entire selector
-.mathquill-editable .cursor:only-child .line {
+.mathquill-editable .cursor:only-child {
   width: .5em;
-  display: inline-block;
 }
 
 .mathquill-textbox {
