Fix cursor handle misaligned with cursor in empty...
...blocks that are text-align center, such as fractions, sums, and
anywhere in tables.

Fix desmosinc/knox#3155.

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -96,8 +96,10 @@
 
 // separated from above because unrecognized pseudoclasses
 // invalidate the entire selector
-.mathquill-editable .cursor:only-child {
+.mathquill-editable .cursor:only-child:after {
   width: .5em;
+  display: inline-block;
+  content: '';
 }
 
 .mathquill-textbox {
