stop applying styling to handle & root-block

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -85,7 +85,7 @@
   background: transparent;
 }
 
-.mathquill-rendered-math span:not(.mathquill-root-block):empty:after {
+.mathquill-root-block span:not(.handle):empty:after {
   background: #ccc;
 }
 
