--- a/src/css/math.less
+++ b/src/css/math.less
@@ -32,6 +32,19 @@
     white-space: pre-wrap;
   }
 
+  // TODO: what's the difference between these?
+  .empty {
+    background: #ccc;
+    &.mathquill-root-block {
+      background: transparent;
+    }
+  }
+
+  &.empty {
+    background: transparent;
+  }
+
+
   .text {
     font-size: 87%;
   }
