--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -9,7 +9,7 @@
     .inline-block;
 
     .line { border-left: 1px solid black; }
-    &.blink .line { visibility: hidden; }
+    &.mq-blink .line { visibility: hidden; }
 
     .handle {
       display: inline-block;
