"automatically rewrote class cursor to .mq-cursor
Remaining instances of cursor:
Makefile:  $(SRC_DIR)/cursor.js \
README.md:* To write some LaTeX at the current cursor position:
README.md:* To insert a LaTeX command at the current cursor position or with the current selection:
README.md:the `border-color`, because the cursor, fraction bar, and square root
README.md:  of a parent node.  This is used, for example, for the cursor.
README.md:`cursor.js` defines the "singleton" classes for the visible blinking
README.md:cursor and highlighted selection.
README.md:      on the cursor, which then bubble upwards
src/commands.js:  function insertBeforeUnlessAtEnd(cursor) {
src/commands.js:    // cursor.insertBefore(cmd), unless cursor at the end of block, and every
src/commands.js:    var cmd = this.parent, ancestorCmd = cursor;
src/commands.js:        cursor.insertBefore(cmd);
src/commands.js:    cursor.insertAfter(cmd);
src/commands.js:    var cursor;
src/commands.js:    for (var ancestor = this.parent; !cursor; ancestor = ancestor.parent) {
src/commands.js:      cursor = ancestor.cursor;
src/commands.js:    this.getCursor = function() { return cursor; };
src/commands.js:    // cursor's center
src/commands.js:  _.placeCursor = function(cursor) {
src/commands.js:    cursor.appendTo(this.firstChild).writeLatex('n=').show();
src/commands.js:  function insertAfterUnlessAtBeginning(cursor) {
src/commands.js:    // cursor.insertAfter(cmd), unless cursor at the beginning of block, and every
src/commands.js:    var cmd = this.parent, ancestorCmd = cursor;
src/commands.js:        cursor.insertAfter(cmd);
src/commands.js:    cursor.insertBefore(cmd);
src/commands.js:    // the baseline almost perfectly aligns with the cursor's center
src/commands.js:  _.createBefore = function(cursor) {
src/commands.js:      var prev = cursor.prev;
src/commands.js:      if (prev !== cursor.prev) {
src/commands.js:        this.replaces(MathFragment(prev.next || cursor.parent.firstChild, cursor.prev)

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -1,7 +1,7 @@
 .mathquill-editable {
   .inline-block;
 
-  .cursor {
+  .mq-cursor {
     margin-right: -1px;
     position: relative;
     z-index: 1;
@@ -90,7 +90,7 @@
 
 // separated from above because unrecognized pseudoclasses
 // invalidate the entire selector
-.mathquill-editable .cursor:only-child:after {
+.mathquill-editable .mq-cursor:only-child:after {
   width: .5em;
   display: inline-block;
   content: '';
