"automatically rewrote class fraction to .mq-fraction
Remaining instances of fraction:
README.md:the `border-color`, because the cursor, fraction bar, and square root
src/commands.js:LatexCmds.fraction = P(MathCommand, function(_, _super) {
test/unit/updown.test.js:  test('up/down into and within fraction', function() {
test/unit/updown.test.js:    assert.equal(frac.latex(), '\\frac{12}{34}', 'fraction is in root block');
test/unit/updown.test.js:    assert.equal(frac, rootBlock.lastChild, 'fraction is sole child of root block');
test/unit/updown.test.js:    assert.equal(numer.latex(), '12', 'numerator is first child of fraction');
test/unit/updown.test.js:    assert.equal(denom.latex(), '34', 'denominator is last child of fraction');
test/unit/updown.test.js:    assert.equal(cursor.next, 0, 'cursor up from right of fraction appends to numerator');
test/unit/updown.test.js:    assert.equal(cursor.parent, rootBlock, 'cursor outside fraction');
test/unit/updown.test.js:    assert.equal(cursor.next, frac, 'cursor before fraction');
test/unit/updown.test.js:    assert.equal(cursor.prev, 0, 'cursor up from left of fraction prepends to numerator');
test/unit/updown.test.js:    assert.equal(cursor.parent, rootBlock, 'cursor outside fraction');
test/unit/updown.test.js:    assert.equal(cursor.next, frac, 'cursor before fraction');
test/unit/updown.test.js:    assert.equal(cursor.prev, 0, 'cursor down from left of fraction prepends to denominator');
test/unit/updown.test.js:    assert.equal(cursor.parent, subFracNumer, 'cursor up from beginning of subscript goes into subscript fraction numerator');
test/unit/updown.test.js:    assert.equal(cursor.parent, dxBlock, 'cursor up from subscript fraction numerator goes out of subscript');
test/unit/updown.test.js:    assert.equal(cursor.next, sub, 'cursor up from subscript fraction numerator goes before subscript');
test/unit/updown.test.js:    assert.equal(cursor.parent, subFracDenom, 'cursor in subscript fraction denominator');
t

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -128,7 +128,7 @@
 
     // special styles for fractions
     // within sup/sub.
-    .fraction {
+    .mq-fraction {
       font-size: 70%;
       vertical-align: -0.4em;
     }
@@ -207,7 +207,7 @@
   ////
   // \frac
   // fractions
-  .fraction {
+  .mq-fraction {
     font-size: 90%;
     text-align: center;
     vertical-align: -.5em;
@@ -216,12 +216,12 @@
 
   // Firefox 2 (and older?) only
   // because display:inline-block is FUBAR in Gecko < 1.9.0
-  .fraction, .large-operator, x:-moz-any-link {
+  .mq-fraction, .large-operator, x:-moz-any-link {
     display: -moz-groupbox;
   }
 
   // Firefox 3+ (Gecko 1.9.0+)
-  .fraction, .large-operator, x:-moz-any-link, x:default {
+  .mq-fraction, .large-operator, x:-moz-any-link, x:default {
     display: inline-block;
   }
 
