"automatically rewrote class from to .mq-from
Remaining instances of from:
BUILDING:otherwise, you can get it from http://nodejs.org/ .
README.md:To use MathQuill on your website, grab the latest tarball from the [downloads page][], and serve
README.md:`mathquill.css` to include from the right directory)
README.md:from the root directory of the repo and `make` will start working.
src/commands.js://ideas from http://github.com/louisremi/jquery.transform.js
src/css/editable.less:// Keeps blocks from collapsing to zero width/height
src/css/editable.less:// separated from above because unrecognized pseudoclasses
src/intro.js: * calls to `pray` will be stripped from the minified
src/math.js: * Both MathBlock's and MathCommand's descend from it.
src/math.js: * symbols and operators that descend (in the Math DOM tree) from
src/parser.js:  // construct your Parser from the base parsers and the
src/rootelements.js:    // Prevent newlines from showing up
src/symbols.js:    //removeClass from all the things before figuring out what's an autocmd, if any
src/symbols.js:    //test if there's an autocommand here, going through substrings from longest to shortest
src/symbols.js:// Fragment. Creates the Fragment from a LaTeX string
src/textarea.js:  // The following [key values][1] map was compiled from the
src/tree.js: * DocumentFragment, whose contents must be detached from the visible tree
test/support/jquery-1.7.2.js:		// Logic borrowed from http://json.org/json2.js
test/support/jquery-1.7.2.js:	// Convert flags from String-formatted to Object-formatted
test/support/jquery-1.7.2.js:			// Remove a callback from the list
test/support/jquery-1.7.2.js:			// Remove all callbacks from the list
test/support/jquery-1.7.2.js:		// Get the style information from getAttribute
test/support/jquery-1.7.2.js:	// Test to see if it's possible to delete an expando from an element
test/support/jquery-1.7.2.js:	// Technique from Juriy Zaytsev
test/support/jquery-1.7.2.js:			// IE does not allow us t

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -269,13 +269,13 @@
       display: inline-block;
     }
 
-    .from, .to  {
+    .mq-from, .to  {
       display: block;
     }
-    .from, .to  {
+    .mq-from, .to  {
       font-size: 80%;
     }
-    .from {
+    .mq-from {
       margin-top: -.1em;
       float: right; /* take out of normal flow to manipulate baseline */
       width: 100%;
