"automatically rewrote class latex-command-input to .mq-latex-command-input
Remaining instances of latex-command-input:
"

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -58,7 +58,7 @@
 
   ////
   // command input with \
-  .latex-command-input {
+  .mq-latex-command-input {
     color: inherit;
     font-family: @mono;
     border: 1px solid gray;
