"automatically rewrote class matrixed-container to .mq-matrixed-container
Remaining instances of matrixed-container:
README.md:a Chroma filter on elements with class `matrixed-container`.
README.md:    #my-math-input .matrixed-container {
"

--- a/src/css/matrixed.less
+++ b/src/css/matrixed.less
@@ -13,7 +13,7 @@
     background: white;
     .inline-block;
   }
-  .matrixed-container {
+  .mq-matrixed-container {
     filter: progid:DXImageTransform.Microsoft.Chroma(color='white');
     margin-top: -.1em;
   }
