--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -71,7 +71,7 @@
     }
 
     // TODO: dasherize has-cursor
-    &.hasCursor {
+    &.mq-hasCursor {
       border-color: ActiveBorder;
     }
   }
