--- a/src/css/math.less
+++ b/src/css/math.less
@@ -173,7 +173,7 @@
 
   ////
   // parentheses
-  .paren {
+  .mq-paren {
     padding: 0 .1em;
     vertical-align: bottom;
     -webkit-transform-origin: bottom center;
