Tool-assisted rewrite of .matrixed to .mq-matrixed
Remaining instances of 'matrixed':
src/css/main.less:@import "matrixed.less";
src/css/matrixed.less:  .mq-matrixed {
src/css/matrixed.less:  .mq-matrixed-container {
src/css/selections.less:// setting the background color of matrixed/containers inside

--- a/src/css/matrixed.less
+++ b/src/css/matrixed.less
@@ -9,7 +9,7 @@
 // for more details.
 
 .mathquill-rendered-math {
-  .matrixed {
+  .mq-matrixed {
     background: white;
     .inline-block;
   }
