--- a/src/css/math.less
+++ b/src/css/math.less
@@ -133,7 +133,7 @@
       vertical-align: -0.4em;
     }
 
-    .numerator {
+    .mq-numerator {
       padding-bottom: 0;
     }
 
@@ -225,11 +225,11 @@
     display: inline-block;
   }
 
-  .numerator, .mq-denominator {
+  .mq-numerator, .mq-denominator {
     display: block;
   }
 
-  .numerator {
+  .mq-numerator {
     padding: 0 0.1em;
     margin-bottom: -0.1em;
   }
