Tool-assisted rewrite of .un-italicized to .mq-un-italicized
No remaining instances of 'un-italicized'.

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -195,12 +195,12 @@
   ////
   // non-italicized functions
   // like \sin, \cos, \ln, etc.
-  .un-italicized {
+  .mq-un-italicized {
     font-family: @times;
     line-height: 1;
     font-style: normal;
   }
-  var.un-italicized.last {
+  var.mq-un-italicized.last {
     padding-right: .2em;
   }
 
