--- a/src/css/math.less
+++ b/src/css/math.less
@@ -102,7 +102,7 @@
     .inline-block;
   }
 
-  .unary-operator {
+  .mq-unary-operator {
     padding-left: 0.2em;
   }
 
@@ -118,7 +118,7 @@
       padding: 0 .1em;
     }
 
-    .unary-operator {
+    .mq-unary-operator {
       padding-left: .1em;
     }
 
